--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "styletron-engine-atomic": "^1.4.4",
